source: updated pubs & cv

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -2,6 +2,40 @@
 ---
 
 
+@article{glatt-holtz2024sacred,
+	title = {Sacred and {Profane}: from the {Involutive} {Theory} of {MCMC} to {Helpful} {Hamiltonian} {Hacks}},
+	shorttitle = {Sacred and {Profane}},
+	url = {http://arxiv.org/abs/2410.17398},
+  arxiv = {2410.17398},
+	doi = {10.48550/arXiv.2410.17398},
+	abstract = {In the first edition of this Handbook, two remarkable chapters consider seemingly distinct yet deeply connected subjects ...},
+	urldate = {2024-10-28},
+	publisher = {arXiv},
+	author = {Glatt-Holtz, Nathan E. and Holbrook, Andrew J. and Krometis, Justin A. and Mondaini, Cecilia F. and Sheth, Ami},
+	month = oct,
+	year = {2024},
+	note = {arXiv:2410.17398},
+	keywords = {Mathematics - Probability, Mathematics - Statistics Theory, Statistics - Computation, Statistics - Methodology, Statistics - Statistics Theory},
+	file = {Preprint PDF:C\:\\Users\\jkrometi\\Zotero\\storage\\NZUB5SBE\\Glatt-Holtz et al. - 2024 - Sacred and Profane from the Involutive Theory of .pdf:application/pdf;Snapshot:C\:\\Users\\jkrometi\\Zotero\\storage\\TXKISNX9\\2410.html:text/html},
+}
+
+
+@article{sieck2024framework,
+  abbr={MORJ},
+	title = {A {Framework} for {Using} {Priors} in a {Continuum} of {Testing}},
+	volume = {29},
+	url = {https://doi.org/10.5711/1082598329319},
+	html = {https://doi.org/10.5711/1082598329319},
+	doi = {10.5711/1082598329319},
+	abstract = {A strength of the Bayesian paradigm is that it can leverage all available information—to include subject matter expert opinion and previous (possibly dissimilar) data—through prior probabilities (priors). This article develops a framework for thinking about how differently characterized priors can be appropriately used throughout the continuum of testing. In addition to the application of various priors, the application of the evolution of priors contributes greatly to analytical understanding and will be addressed, considering cases such as when a system’s state signiﬁcantly changes (e.g., is modiﬁed) during phases of testing. The evolution of priors can start with priors attempting to provide no information and evolve toward priors that capture the (newly) available information. This article further discusses priors based on institutional knowledge, as well as those based on previous testing data; the focus will be on previous, in some ways dissimilar, data, relative to a current test event. A discussion on which priorsmightbemorecommonin various phases of testing, types of information that can be used in priors, and how priors evolve as information accumulates is also included. Finally, a real-world example using the Stryker family of vehicles demonstrates how priors can be employed in a continuum-of-testing construct.},
+	number = {3},
+	journal = {Military Operations Research},
+	author = {Sieck, Victoria R.C. and Krometis, Justin A. and Thorsen, Steven},
+	year = {2024},
+	file = {Sieck et al. - 2024 - A Framework for Using Priors in a Continuum of Tes.pdf:C\:\\Users\\jkrometi\\Zotero\\storage\\IEAD824J\\Sieck et al. - 2024 - A Framework for Using Priors in a Continuum of Tes.pdf:application/pdf},
+}
+
+
 @article{glatt-holtz2024parallel,
   abbr={TMA},
 	title = {Parallel {MCMC} algorithms: theoretical foundations, algorithm design, case studies},
@@ -22,6 +56,49 @@
 	year = {2024},
 	pages = {tnae004},
 	file = {Full Text PDF:C\:\\Users\\jkrometi\\Zotero\\storage\\HTADDNLC\\Glatt-Holtz et al. - 2024 - Parallel MCMC algorithms theoretical foundations,.pdf:application/pdf},
+}
+
+
+@article{costa2024uncertainty,
+  abbr={RS},
+	title = {Uncertainty {Quantification} in {Data} {Fusion} {Classifier} for {Ship}-{Wake} {Detection}},
+	volume = {16},
+	copyright = {http://creativecommons.org/licenses/by/3.0/},
+	issn = {2072-4292},
+	url = {https://www.mdpi.com/2072-4292/16/24/4669},
+	html = {https://doi.org/10.3390/rs16244669},
+	doi = {10.3390/rs16244669},
+	abstract = {Using deep learning model predictions requires not only understanding the model’s confidence but also its uncertainty, so we know when to trust the prediction or require support from a human. In this study, we used Monte Carlo dropout (MCDO) to characterize the uncertainty of deep learning image classification algorithms, including feature fusion models, on simulated synthetic aperture radar (SAR) images of persistent ship wakes. Comparing to a baseline, we used the distribution of predictions from dropout with simple mean value ensembling and the Kolmogorov—Smirnov (KS) test to classify in-domain and out-of-domain (OOD) test samples, created by rotating images to angles not present in the training data. Our objective was to improve the classification robustness and identify OOD images during the test time. The mean value ensembling did not improve the performance over the baseline, in that there was a –1.05\% difference in the Matthews correlation coefficient (MCC) from the baseline model averaged across all SAR bands. The KS test, by contrast, saw an improvement of +12.5\% difference in MCC and was able to identify the majority of OOD samples. Leveraging the full distribution of predictions improved the classification robustness and allowed labeling test images as OOD. The feature fusion models, however, did not improve the performance over the single SAR-band models, demonstrating that it is best to rely on the highest quality data source available (in our case, C-band).},
+	language = {en},
+	number = {24},
+	urldate = {2024-12-14},
+	journal = {Remote Sensing},
+	author = {Costa, Maice and Sobien, Daniel and Garg, Ria and Cheung, Winnie and Krometis, Justin and Kauffman, Justin A.},
+	month = jan,
+	year = {2024},
+	note = {Number: 24
+Publisher: Multidisciplinary Digital Publishing Institute},
+	keywords = {deep neural network, simulated data, synthetic aperture radar, uncertainty quantification, data fusion},
+	pages = {4669},
+	file = {Full Text PDF:C\:\\Users\\jkrometi\\Zotero\\storage\\IDFSN4SM\\Costa et al. - 2024 - Uncertainty Quantification in Data Fusion Classifi.pdf:application/pdf},
+}
+
+
+@article{krometis2024dodging,
+  abbr={ITEA},
+	title = {Dodging {Pitfalls} in {Packages} for {Artificial} {Intelligence} and {Machine} {Learning}},
+	volume = {45},
+	url = {https://itea.org/journals/volume-45-3/dodging-pitfalls-in-packages-for-artificial-intelligence/},
+	html = {https://doi.org/10.61278/itea.45.3.1004},
+	doi = {10.61278/itea.45.3.1004},
+	abstract = {Recent years have seen an explosion in the application of artificial intelligence and machine learning (AI/ML) to practical problems from computer vision to game playing to algorithm design. This growth has been mirrored and, in many ways, been enabled by the development and maturity of publicly-available software packages that make model building, training, and testing easier than ever. While these packages provide tremendous power and flexibility to users, and greatly facilitate learning and deploying AI/ML techniques, they and the models they provide are extremely complicated and as a result can present a number of subtle but serious pitfalls. This paper presents three examples where obscure settings or bugs in these packages dramatically changed model behavior or performance – one from a deep learning regression application, one from reinforcement learning, and one from computer vision classification. These examples illustrate the importance of thinking carefully about the results that a model is producing and carefully checking each step in its development before trusting its output.},
+	language = {en-US},
+	number = {3},
+	urldate = {2024-09-23},
+	journal = {The ITEA Journal of Test and Evaluation},
+	author = {Krometis, Justin and Snyder, William},
+	month = jun,
+	year = {2024},
 }
 
 
